cosmetic: eliminate warnings